Fehler markiert oder behoben bis einschließlich VL 11

--- a/Vorlesungen/vl_04.tex
+++ b/Vorlesungen/vl_04.tex
@@ -71,7 +71,7 @@
 	\begin{equation*}
 	\phi\left(x\right) := f\left(x\right) - f\left(x_0\right) - c\left(x-x_0\right)
 	\end{equation*}			
-	\item Vergisst man die Funktion $\phi$, versteht man mit der Geradengleichung
+	\item Vergisst man die Funktion $\phi$, versteht man mit der Geradengleichung \todo{Hier ist der Satz unvollständig}
 		\begin{equation*}
 		x \mapsto f\left(x_0\right) + c\left(x-x_0\right)
 		\end{equation*}
@@ -91,7 +91,7 @@
 			= & \lim\limits_{x \rightarrow x_0}
 			{\frac{f\left(x_0\right) + c\left(x-x_0\right)+\phi
 			\left(x\right)-f\left(x_0\right)}{x-x_0}} \\
-			& = \lim\limits_{x\rightarrow x_0}
+			 = & \lim\limits_{x\rightarrow x_0}
 			{c + \frac{\phi \left(x\right)}{x-x_0}} = c
 		\end{align*}
 		\item[]$3\rightarrow 1$ Wir setzten $ c = f'\left(x_0\right)$ und 
