--- a/Vorlesungen/vl_05.tex
+++ b/Vorlesungen/vl_05.tex
@@ -16,7 +16,7 @@
 
 \begin{Satz}{\label{satz:satz_3}
 	Sei $ I \subseteq \mathbb{R}$ ein Intervall, $f: I \rightarrow \mathbb{R}$ 
-	differenzierbar in $x_0 \in I$. Dann ist f in $x_0$ stetig.
+	differenzierbar in $x_0 \in I$. Dann ist $f$ in $x_0$ stetig.
 }\end{Satz}
 
 \begin{proof}
@@ -33,7 +33,7 @@
 	 \begin{itemize}
 	 	\item[ ]
 	 	\item Die Umkehrung dieser Aussage ist im Allgemeinen falsch! \\
-	 	Es gibt sogar Funktionen, die überall stetig aber nirgends 
+	 	Es gibt sogar Funktionen, die überall stetig, aber nirgends 
 	 	differenzierbar sind. \\
 	 	(\textit{Beispiel:} Weierhaus-Fkt: $\sum_{n \in \mathbb{N}} cos(b_n \pi x)$
 	 	mit $a_n \in (0,1)$ und $a_n b_n >1$)
