--- a/Vorlesungen/vl_08.tex
+++ b/Vorlesungen/vl_08.tex
@@ -68,11 +68,11 @@
 	\begin{align*}
 		f(\beta) = P_{n-1,\alpha}(\beta) + M (\beta - \alpha)^n
 	\end{align*}
-	Man beachte, dass die $n-te$ Ableitung der rechten Seite gegeben ist durch
+	Man beachte, dass die $n-te$ Ableitung der rechten Seite gegeben ist durch:
 	\begin{align*}
 		P_{n-1, \alpha}^	{(n)}(t) + n! \cdot M (\textit{ für } t \in [a,b])
 	\end{align*}
-	Daher ist zu zeigen: Es existiert ein x zwischen $\alpha$ und $\beta$ mit:
+	Daher ist zu zeigen: Es existiert ein $x$ zwischen $\alpha$ und $\beta$ mit:
 	\begin{align*}
 		f^{(n)}(x) = n! \cdot M
 	\end{align*}
@@ -167,7 +167,7 @@
 				+ (\frac{f^{(n+1)}(t)}{(n+1)}(x-\alpha)\right)
 			\end{align*}
 			für ein $t$ zwischen $x$ und $\alpha$. Für $x$ hinreichend nah an $\alpha$ 
-			erhalten wir 
+			erhalten wir: 
 			\begin{align*}
 				f^{(n)}(\alpha) + \frac{f^{(n+1)}(t)}{n+1}(x-\alpha)			
 			\end{align*}
