--- a/Vorlesungen/vl_10.tex
+++ b/Vorlesungen/vl_10.tex
@@ -21,12 +21,12 @@
 		\underline{\int_{a}^b} f \dd{x} \leq S(P_{\epsilon},f) 
 		- s(P_{\epsilon},f) < \epsilon
 	\end{align*}
-	Das heißt, da $\epsilon$ beliebig, dass
+	Das heißt, da $\epsilon$ beliebig, dass:
 	\begin{align*}
 		\underline{\int_{a}^b} \dd{x} = \overline{\int_a^b} f \dd{x}
 	\end{align*}
 	Ergo: $f \in \mathcal{R}_{[a,b]}$ \\
-	Per Definition gibt es für alle $\epsilon > 0$ ein $P_{\epsilon}'$ mit 
+	Per Definition gibt es für alle $\epsilon > 0$ ein $P_{\epsilon}'$ mit:
 	\begin{align}
 		\label{gleichung_1_1505}
 		\underline{\int_{a}^b} f \dd{x} - s(P_{\epsilon}',f) < \frac{\epsilon}{2} 
@@ -39,8 +39,8 @@
 	Wir setzten $P_{\epsilon}$ gleich der gemeinsamen Vereinigung von 
 	$P_{\epsilon}'$ und $P_{\epsilon}''$. Man beachte: Wegen Satz~\ref{kap09_satz16} 
 	gelten Gleichung~\ref{gleichung_1_1505} und Gleichung~\ref{gleichung_2_1505},
-	wenn wir $P_{\epsilon}'$ beziehungsweise $P_{\epsilon}''$ durch $P_{\epsilon}$
-	ersetzen. Da $f \in \mathcal{R}_{[a,b]}$ gilt außerdem 
+	wenn wir $P_{\epsilon}'$, beziehungsweise $P_{\epsilon}''$, durch $P_{\epsilon}$
+	ersetzen. Da $f \in \mathcal{R}_{[a,b]}$ gilt außerdem:
 	\begin{align*}
 		\underline{\int_{a}^b} f \dd{x} = \overline{\int_a^{b}} f\dd{x}
 	\end{align*}	 
@@ -58,7 +58,7 @@
 	\begin{enumerate}
 		\item Ist $P$ eine Verfeinerung von $P_{\epsilon}$, so gilt 
 		$S(P,f) - s(P,f) < \epsilon$
-		\item Sind $s_i, t_i$ beliebige Punkte in $[x_{i-1},x_i]$, so gilt 
+		\item Sind $s_i, t_i$ beliebige Punkte in $[x_{i-1},x_i]$, so gilt:
 		\begin{align*}
 			\sum_{i=1}^n \left\vert f(s_i) - f(t_i) \right\vert \cdot 
 			\Delta x_i < \epsilon
@@ -91,13 +91,13 @@
 			 \end{align*}
 			 und $s(P_{\epsilon},f) \leq \int_a^b f \dd{x} \leq S(P_{\epsilon},f)$
 	\end{enumerate}
+\end{proof}
 	Wir wollen im Folgenden wichtige Vertreter Riemann-integrierbarer 
 	Funktionen kennenlernen.
-\end{proof}
 
 \begin{Satz}{\label{kap10_satz20}
 	Ist $f: [a,b] \rightarrow \mathbb{R}$ stetig, so ist 
-	$ f \in \mathcal{R}_{[a,b]}$ 
+	$ f \in \mathcal{R}_{[a,b]}$.
 }\end{Satz}
 
 \begin{proof}
@@ -135,11 +135,11 @@
 		S(P_n, f) - s(P_n,f) = & \sum_{i=1}^n (M_i - m_i)\Delta x_i
 	\end{align*}
 	Ohne Einschränkung sei $f$ monoton wachsend (der andere Fall läuft analog).
-	Dann gilt 
+	Dann gilt:
 	\begin{align*}
 		M_i = & f(x_i) \text{ und} \\
 		m_i = & f(x_{i-1})
-	\end{align*} und daher 
+	\end{align*} und daher:
 	\begin{align*}
 		S(P_n, f) - s(P_n,f) = & \sum_{i=1}^n (f(x_i) -f(x_{i-1}))\cdot \Delta x_i 
 		\\ \leq & \frac{1}{	n}\sum_{i=1}^n f(x_i) -f(x_{i-1}) = 
@@ -160,7 +160,7 @@
 		\begin{center}
 			\includegraphics[scale=0.5]{Skizzen/plot_fkt_unstetigkeitsstellen}
 		\end{center}
-		\caption{Funktion mit endlichen Unstetigkeitsstellen}
+		\caption{Funktion mit endlich vielen Unstetigkeitsstellen}
 		\label{plot_fkt_unstetigketsstellen}
 	\end{figure}
 }\end{Satz}
@@ -187,13 +187,13 @@
 	 \end{align*}
 	Per Vorraussetzung ist $f_{\vert I_j^{\epsilon}} (j = 1,\hdots, n+1)$ stetig. \\
 	Daher existiert nach Satz~\ref{kap10_satz20}
-	eine Partition $P_j^{\epsilon}$, so dass 
+	eine Partition $P_j^{\epsilon}$, so dass:
 	\begin{align*}
 		S(P_j^{\epsilon}, f_{I_j{\epsilon}}) - s(P_j^{\epsilon}, f_{I_j^{\epsilon}}) 
 		 < \frac{\epsilon}{2(n+1)}
 	\end{align*}
 	Wir setzen $P^{\epsilon} = \cup_{l = 1}^n P_l^{\epsilon}
-	 \cup U_{l=1}^n\{u_l,v_l\}$\\
+	 \cup U_{l=1}^n\{u_l,v_l\}$.\\
 	 Dann gilt:
 	 \begin{align*}
 	 	S(P^{\epsilon},f) - s(P^{\epsilon},f) 
@@ -211,8 +211,8 @@
 	Eine Funktion $f: [a,b] \rightarrow \mathbb{R}$ heißt \emph{Treppenfunktion}
 	 (Abbildung~\ref{plot_treppenfkt}), 
 	wenn es 
-	eine Partition $Z = \{ y_0, \hdots, y_m \}$ von $[a,b]$ und für alle 
-	$i \in \{0, \hdots, m\}$ für $c_i \in \mathbb{R}$ gibt, so dass 
+	eine Partition $Z = \{ y_0, \hdots, y_m \}$ von $[a,b]$ gibt und für alle 
+	$i \in \{0, \hdots, m\}$ für $c_i \in \mathbb{R}$ gibt, so dass \todo{Satz unvollständig / falsch}
 	\begin{align*}
 		f(x) = c_i \text{ } ( x\in (y_{i-1},y_i))
 	\end{align*}
@@ -226,6 +226,7 @@
 	Nach Satz~\ref{kap10_satz21}
 	ist jede Treppenfunktion Riemann-integrierbar. \\
 	Zur Berechnung des Intervalls bedienen wir uns der Notation von Satz 10 
+	\todo{falsche Referenz -> hardgecodet}
 	und verwenden Satz~\ref{kap10_satz19}c.\\
 	Zur Vereinfachung nehmen wir wieder an, dass $f$ in $a$ und $b$ stetig ist. 
 	Das heißt die Menge der Unstetigkeitsstellen ist gegeben durch 
