Neue Vorlesung hinzugefügt
ToDos für Referenzen
Seitenumbrüche zwischen Kapiteln statt zwischen Vorlesungen
Warnung mit Margin für die aktuelle Vorlesung??

--- a/Vorlesungen/vl_06.tex
+++ b/Vorlesungen/vl_06.tex
@@ -151,7 +151,7 @@ Wir zeigen zunächst die Aussage über den Konvergenzradius.
 	Es folgen die bekannten Rechenregeln $x^{\alpha}x^{\beta} = x^{\alpha+\beta} $
 	und $x^\alpha \cdot y^\alpha = (xy)^\alpha$
 }\end{Bemerkung}
-
+\cleardoublepage
 \section{Differenzierbare Funktionen auf Intervallen}
 Sei $I \subseteq \mathbb{R}$ ein Intervall
 \begin{Definition}{
