--- a/Vorlesungen/vl_13.tex
+++ b/Vorlesungen/vl_13.tex
@@ -1,6 +1,6 @@
-\section{Erweiterungen des Integralbegriffs}
+\subsection{Erweiterungen des Integralbegriffs}
 
-\subsection{Uneigentliche Integrale}
+\subsubsection{Uneigentliche Integrale}
 
 \textbf{Ziel:} Die Erweiterung des Integralbegriffs auf Integranden, die 
 möglicherweise nicht beschränkt sind, beziehungsweise auf Integrationsintervalle, 
@@ -205,7 +205,7 @@ Damit gilt:
 \end{proof}
 \todo{ Bemerkung statt x -1 -> x+1 ? }
 
-\subsection{Integrale über komplexwertige Funktionen}
+\subsubsection{Integrale über komplexwertige Funktionen}
 
 \begin{Definition}{
 	Sei $f: [a,b] \rightarrow \mathbb{C}$. Dann heißt $f$ auf $[a,b]$ 
