--- a/gesamt.tex
+++ b/gesamt.tex
@@ -66,19 +66,20 @@
 
 \begin{document}
 \tableofcontents
-\include{Vorlesungen/vl_04}
-\include{Vorlesungen/vl_05}
-\include{Vorlesungen/vl_06}
-\include{Vorlesungen/vl_07}
-\include{Vorlesungen/vl_08}
-\include{Vorlesungen/vl_09}
-\include{Vorlesungen/vl_10}
-\include{Vorlesungen/vl_11}
-\include{Vorlesungen/vl_12}
-\include{Vorlesungen/vl_13}
-\include{Vorlesungen/vl_14}
-\include{Vorlesungen/vl_15}
-\include{Vorlesungen/vl_16}
-
+\cleardoublepage
+\input{Vorlesungen/vl_04}
+\input{Vorlesungen/vl_05}
+\input{Vorlesungen/vl_06}
+\input{Vorlesungen/vl_07}
+\input{Vorlesungen/vl_08}
+\input{Vorlesungen/vl_09}
+\input{Vorlesungen/vl_10}
+\input{Vorlesungen/vl_11}
+\input{Vorlesungen/vl_12}
+\input{Vorlesungen/vl_13}
+\input{Vorlesungen/vl_14}
+\input{Vorlesungen/vl_15}
+\input{Vorlesungen/vl_16}
+\input{Vorlesungen/vl_17}
 \end{document}
  	
