--- a/Vorlesungen/vl_13.tex
+++ b/Vorlesungen/vl_13.tex
@@ -28,6 +28,11 @@ die nicht beschränkt sind.
 	\begin{align*}
 		\int_1^{\infty} \frac{\mathrm{d}x}{x^s} = & \frac{1}{s-1} \text{für s > 1 }
 	\end{align*}
+	\begin{figure}
+		\centering
+		\includegraphics[scale=0.3]{Skizzen/plot_bsp_uneigentlichesIntegral}
+	\end{figure}
+	\todo{Caption fehlt}
 	Denn: für $b > 1$ gilt:
 	\begin{align*}
 		\int_a^b \frac{\mathrm{dx}}{x^s} \dd{x} = & \int_a^b x^{-s} \dd{x}
@@ -113,6 +118,11 @@ die nicht beschränkt sind.
 		\sum_{n = 1}^{\infty} f(n) \text{ konvergiert} \Leftrightarrow 
 		\int_1^{\infty} f \dd{x} \text{ existiert}
 	\end{align*}
+	\begin{figure}
+	\centering
+		\caption{Monoton fallende positive Funktion}
+		\includegraphics[scale=0.3]{Skizzen/plot_monotone_fkt_integral}
+	\end{figure}
 }\end{Satz}
 
 \begin{proof}
