--- a/Vorlesungen/vl_17.tex
+++ b/Vorlesungen/vl_17.tex
@@ -18,7 +18,7 @@
 		P\left(\frac{\mathrm{d}}{\mathrm{dt}}\right) x = q(t) \exp(\mu t)
 	\end{align*}
 	eine spezielle Lösung der Gestalt $y(t) = r(t) \exp(\mu t)$, wobei 
-	$r \in \mathbb{C}[t]$ mit \\ $\mathrm{deg} (r) = \mathrm{deg}(q)$\todo{????}
+	$r \in \mathbb{C}[t]$ mit \\ $\mathrm{deg} (r) = \mathrm{deg}(q)$ \todo{Das bedeutet beide Polynome haben den selben Grad.}
 }\end{Satz}
 
 \begin{Bemerkung}{
