--- a/Vorlesungen/vl_18.tex
+++ b/Vorlesungen/vl_18.tex
@@ -154,7 +154,7 @@
 }\end{Bemerkung}
 
 \begin{Satz}{
-	Seien $f_n : [a,b] \rightarrow \mathbb{N}$ stetig differenzierbar $(n \in 
+	Seien $f_n : [a,b] \rightarrow \mathbb{R}$ stetig differenzierbar $(n \in 
 	\mathbb{N})$. Weiter gelte, dass $(f_n)$ punktweise gegen $f:[a,b] \rightarrow 
 	\mathbb{R}$ konvergiert und $(f_n')$ gleichmäßig gegen 
 	$g:[a,b] \rightarrow \mathbb{R}$ konvergiert. Dann ist $f$ stetig 
