--- a/Vorlesungen/vl_10.tex
+++ b/Vorlesungen/vl_10.tex
@@ -212,10 +212,11 @@
 	 (Abbildung~\ref{plot_treppenfkt}), 
 	wenn es 
 	eine Partition $Z = \{ y_0, \hdots, y_m \}$ von $[a,b]$ gibt und für alle 
-	$i \in \{0, \hdots, m\}$ für $c_i \in \mathbb{R}$ gibt, so dass \todo{Satz unvollständig / falsch}
+	$i \in \{0, \hdots, m\}$ für $c_i \in \mathbb{R}$ gibt, so dass \todo{ Satzbau?}
 	\begin{align*}
 		f(x) = c_i \text{ } ( x\in (y_{i-1},y_i))
 	\end{align*}
+	gilt.
 	\begin{figure}
 		\begin{center}
 			\includegraphics[scale=0.5]{Skizzen/plot_treppenfkt}
