--- a/Vorlesungen/vl_17.tex
+++ b/Vorlesungen/vl_17.tex
@@ -136,7 +136,7 @@ $f_n$ bezeichnen.
 	\begin{align*}
 		f_n: [0,1] \rightarrow & \mathbb{R} \\
 		f_n(x) = & \begin{cases} 0 & \text{für } x 
-			\in [0, 1 - \frac{1}{n}] \\ nx - (n-1) & \text{ sonst}
+			\in [0, 1 - \frac{1}{n}) \\ nx - (n-1) & \text{ sonst}
 			\end{cases}
 	\end{align*}
 		Behauptung: $(f_n)_{n \in \mathbb{N}}$ konvergiert punktweise gegen 
